project/stage/testing/semantic/semantic_tests/accept/func_return_only.ul
void main() {
    return;
}

int foo1(float bar1) {
    int i;
    return i;
}

boolean func(float bar1) {
    boolean b;
    return b;
}

string funky(float bar1) {
    string b;
    return b;
}

float foo2(float bar2) {
    return bar2;
}
