project/stage/testing/semantic/semantic_tests/reject/index_undefined.ul
void main() {
    notarr[foo()];
}
int foo(){
    return 0;
}
